--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+h1 {
+    color: #77aabb;
+    text-align: center;
+}
+
 p1 {
-    color: #77aabb
+    text-align: justify;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
