--- a/style.css
+++ b/style.css
@@ -13,3 +13,18 @@ p2 {
     size: 20px;
     text-align: center;
 }
+
+p3 {
+    font-size: 30px;
+    color: #64815f;
+}
+
+bottone {
+    color: #123456;
+    text-align: center;
+    font-size: 50px;
+}
+
+tristezza {
+    font-style: italic;
+}
